src/main/java/com/example/solid/interfaceSegregation/good/Eater.java
package com.example.solid.interfaceSegregation.good;

public interface Eater {
    void eat();
}
