src/main/java/com/example/solid/interfaceSegregation/bad/Animal.java
package com.example.solid.interfaceSegregation.bad;

public interface Animal {
    void eat();
    void fly();
}
